tools/sddl/assembler/tests/success/math_div_basic.asm
# Test: math.div - division
# Stack: ... I64 I64 → ... I64
push.i32 20
push.i32 5
math.div
halt
