tools/sddl/assembler/tests/fail/cmp_eq_with_param.asm
# EXPECT-ERROR: Unknown instruction or unexpected token
push.i32 10
push.i32 20
cmp.eq 5
halt
